--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "generate-client": "openapi-generator-cli generate -i http://localhost:5000/swagger/v1/swagger.json -g typescript-fetch -o api-client -c api-config.json",
+    "update-client": "npm run generate-client && cd api-client && npm install"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.9.0",
@@ -16,6 +18,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@openapitools/openapi-generator-cli": "^2.15.3"
   }
 }
