add fotter component and setup font-awesome to render server side

--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -12,6 +12,11 @@
     "update-client": "npm run generate-client && cd api-client && npm install"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.14.1592",
     "vue": "latest",
