--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -12,8 +12,6 @@
     "update-client": "npm run generate-client && cd api-client && npm install"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
-    "@mapbox/mapbox-sdk": "^0.16.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -21,14 +19,13 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.14.1592",
+    "nuxt-mapbox": "^1.6.1",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
-    "@types/mapbox__mapbox-sdk": "^0.14.0",
-    "@types/mapbox-gl": "^3.1.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@openapitools/openapi-generator-cli": "^2.15.3"
+    "@openapitools/openapi-generator-cli": "^2.15.3",
+    "mapbox-gl": "^3.9.1"
   }
 }
