--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.14.1592",
     "nuxt-mapbox": "^1.6.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "latest",
     "vue-router": "latest"
   },
