--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@pinia/nuxt": "^0.9.0",
+    "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.14.1592",
     "nuxt-mapbox": "^1.6.1",
     "pinia-plugin-persistedstate": "^4.2.0",
