--- a/mooring-pin/package.json
+++ b/mooring-pin/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.9.0",
     "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.14.1592",
